<resources>
    <string name="app_name">HangOut</string>
    <string name="chosen_event">Chosen event</string>
    <string name="event_date">Event date</string>
    <string name="map">Map</string>
    <string name="signed">Signed</string>
    <string name="join">Join</string>
    <string name="chat">Chat</string>
    <string name="you_are_signed_up">You are signed up</string>
    <string name="event_comment">Event comment:</string>
    <string name="comment">Comment</string>
    <string name="organizer">Organizer</string>
    <string name="username">username</string>
    <string name="event_starts">Event starts:</string>
    <string name="time">time</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="str_wifi_alert_message">Please turn on internet connection and Location</string>
    <string name="str_wifi_alert_title">Internet and GPS required</string>
    <string name="delete_account">Delete account</string>
    <string name="remove_my_location">Remove my location</string>
    <string name="event_name">Event name</string>
    <string name="edit_event">Edit event</string>
    <string name="event_time">Event time</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_message">Enter message:</string>
    <string name="welcome_to_hangout">Welcome to HangOut!</string>
    <string name="please_login_or_create_a_new_account">Please login or create a new account.</string>
    <string name="exit">EXIT</string>
    <string name="about_us">ABOUT US</string>
    <string name="add_police">Add Police</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_info">Add info</string>
    <string name="add_event">Add event</string>
    <string name="mark_my_location">Mark my location</string>
    <string name="my_events">My events</string>
    <string name="my_location">My location</string>
    <string name="date_set_string">%1$d.%2$d.%3$d</string>
    <string name="time_set_string">%1$s:%2$s</string>
    <string name="minimum_6_symbols">minimum 6 symbols</string>
    <string name="new_password">New password:</string>
    <string name="repeat_password">Confirm new password:</string>
    <string name="go_back">GO BACK</string>
    <string name="login">Login</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password">Password:</string>
    <string name="please_enter_email_address">please enter email address</string>

</resources>