<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:background="@color/colorPrimaryDark2">


                <TextView
                    android:id="@+id/tv_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="15dp"
                    android:ems="10"
                    android:hint="@string/please_enter_email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/colorPrimaryDark4"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="15dp"
                    android:ems="10"
                    android:hint="@string/minimum_6_symbols"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/colorPrimaryDark4"
                    android:textColorLink="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ProgressBar
                    android:id="@+id/pb_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="?android:attr/progressBarStyle"
                    android:indeterminateDrawable="@drawable/pb"
                    android:indeterminateDuration="@android:integer/status_bar_notification_info_maxnum" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="15dp"
                android:padding="15dp"
                android:background="@color/colorPrimaryDark2">


                <Button
                    android:id="@+id/btn_login_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/colorPrimaryLight"
                    android:textColor="@color/white"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btn_login_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/colorPrimaryLight"
                    android:textColor="@color/white"
                    android:text="@string/go_back" />

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>