<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="20dp"
            android:padding="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_user_profile" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp"
                android:background="@color/colorPrimaryDark2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit profile"
                    android:textSize="24sp"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                android:background="@color/colorPrimaryDark2"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorPrimaryLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorPrimaryLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/change_password"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorPrimaryLight" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/confirm_password"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/et_edit_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorPrimaryLight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <ProgressBar
                        android:id="@+id/pb_edit_user"
                        android:layout_marginTop="10dp"
                        style="?android:attr/progressBarStyle"
                        android:indeterminateDrawable="@drawable/pb"
                        android:indeterminateDuration="@android:integer/status_bar_notification_info_maxnum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/confirm"
                    android:background="@color/colorAddGreen"
                    android:textColor="@color/white"/>


                <Button
                    android:id="@+id/btn_delete_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/delete_account"
                    android:background="@color/colorRemoveRed"
                    android:backgroundTint="@color/colorRemoveRed"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>