<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark3"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="15dp"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_event_edit" />

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/colorPrimaryDark2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_event_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/event_name"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/edit_event"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="30dp"
            android:padding="15dp"
            android:background="@color/colorPrimaryDark2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_edit_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimaryLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/event_comment"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_edit_event_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimaryLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/event_date"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/et_edit_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColor="@color/colorAccentLight"
                android:textColorHint="@color/colorPrimaryLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/event_time"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/et_edit_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textSize="20sp"
                android:textCursorDrawable="@null"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimaryLight" />


            <ProgressBar
                android:id="@+id/pb_edit_event"
                android:layout_marginTop="10dp"
                style="?android:attr/progressBarStyle"
                android:indeterminateDrawable="@drawable/pb"
                android:indeterminateDuration="@android:integer/status_bar_notification_info_maxnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_edit_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Confirm"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>


            <Button
                android:id="@+id/btn_delete_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Delete event"
                android:background="@color/colorRemoveRed"
                android:textColor="@color/white"/>



        </LinearLayout>

    </ScrollView>


</LinearLayout>