<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark3">

        <LinearLayout
            android:id="@+id/ll_welcome_header"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_cloud" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/welcome_to_hangout" />

        <TextView
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/please_login_or_create_a_new_account"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_welcome_menu"
            app:layout_constraintTop_toBottomOf="@+id/ll_welcome_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorPrimaryDark2">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="50dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="LOGIN"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="50dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="REGISTER"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="50dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/exit"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="About me"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>